fix buildOrderDetail